# avalon_simulation

./: CMakeLists.txt  avalon_simulation.orogen  manifest.xml
configuration/: assambly.scn  avalon-depth_images.scn  avalon.scene  avalon.scn  avalon_objects.scene  avalon_objects.scn  basin4.mtl  camera_config3.txt  config_pathes  demo.scn  dialog_config.txt  floor_large.scn  fog.scene  mars_default.yaml  mars_saveOnClose.yaml  plugin_config.txt  pool.scn  studiobad.scn  studiobad_new.scn  testhalle.scn  walls.scene  water.mtl
models/: basin.mtl  studiobad.blend  studiobad.mtl  testbed.blend  testbed.mtl  vehicle.blend  vehicle.mtl
ruby/: actuators.rb
scripts/: actuators.rb  asv.rb  asv_simple.rb  avalon_ac_simulation.rb  run.rb  run_simple.rb  test_vehicle.rb
tasks/: ASVActuators.cpp  ASVActuators.hpp  Actuators.cpp  Actuators.hpp  AsvNavigation.cpp  AsvNavigation.hpp  BottomCamera.cpp  BottomCamera.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  FrontCamera.cpp  FrontCamera.hpp  GroundDistance.cpp  GroundDistance.hpp  HBridge.cpp  HBridge.hpp  LaserScaner.cpp  LaserScaner.hpp  LineLaser.cpp  LineLaser.hpp  Microphones.cpp  Microphones.hpp  Modem.cpp  Modem.hpp  MotionControl.cpp  MotionControl.hpp  PingerSearch.cpp  PingerSearch.hpp  PoseEstimator.cpp  PoseEstimator.hpp  Simulation.cpp  Simulation.h  SonarBottom.cpp  SonarBottom.hpp  SonarRear.cpp  SonarRear.hpp  SonarTop.cpp  SonarTop.hpp  StateEstimator.cpp  (+9 more)
